--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,10 @@
 body {
-  background: rgb(202,36,212);
-  background: linear-gradient(0deg, rgba(202,36,212,1) 0%, rgba(0,23,87,1) 100%);  background-repeat: no-repeat;
-  height: 100vh;
+  background: rgb(202, 36, 212);
+  background: linear-gradient(
+    0deg,
+    rgba(202, 36, 212, 1) 0%,
+    rgba(0, 23, 87, 1) 100%
+  );
+  background-repeat: no-repeat;
+  min-height: 100vh;
 }
